Fixes #5 Adicionado mini mapa para mostrar a localização.

--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -49,39 +49,7 @@
                     <img src="~/images/Icons/icon-no-key.png" class="icons" />
                 }
             </div>
-
-            <div>
-
-                @if (Model.Sala == 1)
-                {
-                    <img src="~/images/Rooms/Room1-mini.png" class="icons" />
-                }
-                else if (Model.Sala == 2)
-                {
-                    <img src="~/images/Rooms/Room2-mini.png" class="icons" />
-                }
-                else if (Model.Sala == 3)
-                {
-                    <img src="~/images/Rooms/Room3-mini.png" class="icons" />
-                }
-                else if (Model.Sala == 4)
-                {
-                    <img src="~/images/Rooms/Room4-mini.png" class="icons" />
-                }
-                else if (Model.Sala == 5)
-                {
-                    <img src="~/images/Rooms/Room5-mini.jpg" class="icons" />
-                }
-                else if (Model.Sala == 6)
-                {
-                    <img src="~/images/Rooms/Room6-mini.png" class="icons" />
-                }
-                else if (Model.Sala == 7)
-                {
-                    <img src="~/images/Rooms/Room7-mini.png" class="icons" />
-                }
-                Sala:@Model.Sala
-            </div>
+            
         </div>
     </div>
 
@@ -91,6 +59,37 @@
             {
                 <!--Imagem do Monstro-->
                 <img src="~/images/Icons/icon-key.png" class="monstro" />
+            }
+        </div>
+        <div>
+
+            @if (Model.Sala == 1)
+            {
+                <img src="~/images/MiniMap/mini-n-sala1.png" />
+            }
+            else if (Model.Sala == 2)
+            {
+                <img src="~/images/MiniMap/mini-n-sala2.png" />
+            }
+            else if (Model.Sala == 3)
+            {
+                <img src="~/images/MiniMap/mini-n-sala3.png" />
+            }
+            else if (Model.Sala == 4)
+            {
+                <img src="~/images/MiniMap/mini-n-sala4.png" />
+            }
+            else if (Model.Sala == 5)
+            {
+                <img src="~/images/MiniMap/mini-n-sala5.png" />
+            }
+            else if (Model.Sala == 6)
+            {
+                <img src="~/images/MiniMap/mini-n-sala6.png" />
+            }
+            else if (Model.Sala == 7)
+            {
+                <img src="~/images/MiniMap/mini-n-sala7.png" />
             }
         </div>
     </div>
