--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -18,7 +18,7 @@
                 {
                     <img src="~/images/Old-Frame mini.png" class="icons" />
                 }
-                @Model.Nome
+                   @Model.Nome 
             </div>
             <div>
                 <img src="~/images/Icons/icon-moeda.png" class="icons" />  @Model.MoedasOuro
@@ -53,43 +53,12 @@
         </div>
     </div>
 
-    <div class="col-md-7">
+    <div class="col-md-8">
         <div class="areajogavel">
             @if (Model.Monstro == true)
             {
                 <!--Imagem do Monstro-->
                 <img src="~/images/Icons/icon-key.png" class="monstro" />
-            }
-        </div>
-        <div>
-
-            @if (Model.Sala == 1)
-            {
-                <img src="~/images/MiniMap/mini-n-sala1.png" />
-            }
-            else if (Model.Sala == 2)
-            {
-                <img src="~/images/MiniMap/mini-n-sala2.png" />
-            }
-            else if (Model.Sala == 3)
-            {
-                <img src="~/images/MiniMap/mini-n-sala3.png" />
-            }
-            else if (Model.Sala == 4)
-            {
-                <img src="~/images/MiniMap/mini-n-sala4.png" />
-            }
-            else if (Model.Sala == 5)
-            {
-                <img src="~/images/MiniMap/mini-n-sala5.png" />
-            }
-            else if (Model.Sala == 6)
-            {
-                <img src="~/images/MiniMap/mini-n-sala6.png" />
-            }
-            else if (Model.Sala == 7)
-            {
-                <img src="~/images/MiniMap/mini-n-sala7.png" />
             }
         </div>
     </div>
@@ -143,5 +112,39 @@
                 </div>
             </div>
         }
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="text-center">
+            @if (Model.Sala == 1)
+            {
+                <img src="~/images/MiniMap/mini-n-sala1.png" />
+            }
+            else if (Model.Sala == 2)
+            {
+                <img src="~/images/MiniMap/mini-n-sala2.png" />
+            }
+            else if (Model.Sala == 3)
+            {
+                <img src="~/images/MiniMap/mini-n-sala3.png" />
+            }
+            else if (Model.Sala == 4)
+            {
+                <img src="~/images/MiniMap/mini-n-sala4.png" />
+            }
+            else if (Model.Sala == 5)
+            {
+                <img src="~/images/MiniMap/mini-n-sala5.png" />
+            }
+            else if (Model.Sala == 6)
+            {
+                <img src="~/images/MiniMap/mini-n-sala6.png" />
+            }
+            else if (Model.Sala == 7)
+            {
+                <img src="~/images/MiniMap/mini-n-sala7.png" />
+            }
+        </div>
     </div>
 </div>
