--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -29,7 +29,7 @@ body {
     height: 80%;
     width: 80%;
     filter: brightness(1.4);
-    margin-top:30px;
+   
 }
 
 .BotaoIniciar:hover {
@@ -45,7 +45,7 @@ body {
 .icons {
     height: 40%;
     width: 40%;
-    right:1000px;
+    margin-left: 30px;
 }
 
 
@@ -99,6 +99,7 @@ body {
 .BotoesJogo {
     width: 130px;
     height: 70px;
+    margin-left: 20px;
 }
 .BotoesJogo:hover {
      filter: brightness(1.4);
@@ -230,8 +231,8 @@ input[type='radio'] {
 
 .areadados {
     margin-top: 50px;
-    right:1000px;
 }
+
 
 .areabotoes {
     width: 10%;
