--- a/SetepassosPRJ/Views/Home/Index.cshtml
+++ b/SetepassosPRJ/Views/Home/Index.cshtml
@@ -1,45 +1,47 @@
 ﻿@{ Layout = "_Layout";
     ViewData["Title"] = "Home";
 }
-<div class="box">
-    <div class="column">
-        <h1> Intro </h1>
-        <p>Este jogo foi desenvolvido como projeto no âmbito da disciplina de Desenvolvimento de Aplicações II do curso de G.S.I.</p>
-        <p>O objetivo do jogo é conseguir passar 7 salas com o máximo de pontos, para isso tens de encontrar uma chave que permitirá sair da 7ª sala.</p>
-        
-        
-    </div>
-    <div class="column">
-        <a asp-controller="Jogo" asp-action="CriarJogo"><img src="~/images/btns/btn-iniciar1.png" class="BotaoIniciar" /></a>
-    </div>
-    <div class="column">
-        <h1>Hi-Scores Top 3</h1>
-        <div class="text-center">
-            <table id="tabela" class="table table-condensed">
-                <thead>
-                    <tr>
-                        <th class="text-center" scope="col">Posição</th>
-                        <th class="text-center" scope="col">Nome Jogador</th>
-                        <th class="text-center" scope="col">Pontuação</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr id="1" class="classe1">
-                        <td>1º</td>
-                        <td>José</td>
-                        <td>3500</td>
-                    </tr>
-                    <tr id="2" class="classe1">
-                        <td>2º</td>
-                        <td>José</td>
-                        <td>3500</td>
-                    </tr>
-                    <tr id="3" class="classe1">
-                        <td>3º</td>
-                        <td>José</td>
-                        <td>3500</td>
-                    </tr>
-                </tbody>
-            </table>
+
+<div class='page-wrapper'>
+    <div class='row'>
+        <div class='column'>
+            <h1> Intro </h1>
+            <p>Este jogo foi desenvolvido como projeto no âmbito da disciplina de Desenvolvimento de Aplicações II do curso de G.S.I.</p>
+            <p>O objetivo do jogo é conseguir passar 7 salas com o máximo de pontos, para isso tens de encontrar uma chave que permitirá sair da 7ª sala.</p>
+        </div>
+        <div class='column'>
+            <a asp-controller="Jogo" asp-action="CriarJogo"><img src="~/images/btns/btn-iniciar1.png" class="BotaoIniciar" /></a>
+        </div>
+        <div class='column'>
+            <h1>Hi-Scores Top 3</h1>
+            <div class="text-center">
+                <table id="tabela" class="table table-condensed">
+                    <thead>
+                        <tr>
+                            <th class="text-center" scope="col">Posição</th>
+                            <th class="text-center" scope="col">Nome Jogador</th>
+                            <th class="text-center" scope="col">Pontuação</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr id="1" class="classe1">
+                            <td>1º</td>
+                            <td>José</td>
+                            <td>3500</td>
+                        </tr>
+                        <tr id="2" class="classe1">
+                            <td>2º</td>
+                            <td>José</td>
+                            <td>3500</td>
+                        </tr>
+                        <tr id="3" class="classe1">
+                            <td>3º</td>
+                            <td>José</td>
+                            <td>3500</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
+</div>
