--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -1,35 +1,56 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 
+
+html, body {
+    height: 90%;
+}
+
 body {
-    padding-top: 60px;
+    padding-top: 50px;
     padding-bottom: 10px;
     color: ghostwhite;
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 15px;
     letter-spacing: 1px;
-    background-image: url('../images/Layout/Entrance v1.png')
+    background-image: url('../images/Layout/Entrance v2.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-/*Fazer a pagina inicial com 3 divisões responsivas*/
-.box {
-    display: -webkit-flex;
-    display: -ms-flexbox;
+
+
+
+/*
+    icon de vida
+*/
+/*Fazer colunas responsivas*/
+
+.page-wrapper {
+    margin: 10px;
+}
+
+.row {
     display: flex;
-    overflow: hidden;
-    margin-top: 20px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
 }
-.box .column {
-        flex: 1;
-        margin-right: 8px;
-        padding: 12px;
+
+.column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
 }
-/*Fazer a pagina inicial com 3 divisões responsivas*/
+
+/*Botao iniciar jogo no index*/
 .BotaoIniciar {
     height: 80%;
     width: 80%;
     filter: brightness(1.4);
-   
+    margin: 20px;
 }
 
 .BotaoIniciar:hover {
@@ -43,48 +64,16 @@ body {
 }
 
 .icons {
-    height: 40%;
-    width: 40%;
+    height: 25%;
+    width: 25%;
     margin-left: 30px;
+    margin-top: 8px;
 }
 
-
-#backg {
-    position: fixed;
-    top: -50%;
-    left: -50%;
-    width: 200%;
-    height: 200%;
+.iconMoeda {
+    margin-top:35%;
 }
 
- #backg img {
-        position: absolute;
-        top: 0;
-        left: 10px;
-        right: 10px;
-        bottom: 10px;
-        margin: auto;
-        min-width: 50%;
-        min-height: 50%;
- }
-
-#overlap {
-    position: fixed;
-    top: -50%;
-    left: -50%;
-    width: 200%;
-    height: 200%;
-}
-#overlap img {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        right: 10px;
-        bottom: 10px;
-        margin: auto;
-        min-width: 30%;
-        min-height: 30%;
-}
 
 .charpick {
    width: 22%;
@@ -97,18 +86,17 @@ body {
 }
 
 .BotoesJogo {
-    width: 130px;
-    height: 70px;
-    margin-left: 20px;
+    width: 55%;
+    height: 55%;
+    margin: 5px;
 }
 .BotoesJogo:hover {
      filter: brightness(1.4);
 }
 
-
 label {
     color: beige;
-    font-weight:bold;
+    font-weight: bold;
     padding: 2px;
     text-transform: uppercase;
     font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -120,7 +108,7 @@ label {
 .body-content {
     position: relative;
     padding-left: 10px;
-    padding-right: 10px;
+    padding-right:10px;
 }
 
 
@@ -136,23 +124,13 @@ label {
 }
 
 
-@media screen and (max-width: 767px) {
-    
-    /* Hide captions
-    .carousel-caption {
-        display: none;
-    }
-    */
-}
-
-
-
 input[type='radio'] {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     background: black;
     border-radius: 1px;
     border: 1px solid black;
+    margin: 4px;
 }
 
 #tabela {
@@ -221,7 +199,6 @@ input[type='radio'] {
 }
 
 .areajogavel {
-
     background-image: url(../images/Rooms/AreaJogo.jpg);
     background-repeat: no-repeat;
     width: 100%;
@@ -230,14 +207,14 @@ input[type='radio'] {
 }
 
 .areadados {
-    margin-top: 50px;
+    margin-top: 40%;
 }
 
 
 .areabotoes {
-    width: 10%;
-    height: 10%;
-    margin-top:50px;
+    width: 100%;
+    height: 100%;
+    margin-top: 50px;
 }
 
 /* headers com estilo */
@@ -257,3 +234,11 @@ h3 {
     color: darkcyan;
 }
 
+.fundoJogo {
+    background-image: url(../images/Rooms/Room1.jpg);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    margin-top: 2px;
+    position: relative;
+}
