--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -114,6 +114,12 @@
                 {
                     <!--Imagem do Monstro-->
                     <img src="~/images/Icons/icon-key.png" class="monstro" />
+                    <h5>Dados Monstro</h5>
+                    <img src="~/images/Icons/icon-vida.png" class="iconmonstro" />@Model.PontosVidaMonstro
+                    <br />
+                    <img src="~/images/Icons/icon-forca.png" class="iconmonstro" />@Model.PontosAtaqueMonstro
+                    <br /> 
+                    <img src="~/images/Icons/icon-luck.png" class="iconmonstro" />@Model.PontosSorteMonstro
                 }
             </div>
             <div class="col-md-2 text-center">
