Alteraçao com cod fred

--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -27,7 +27,7 @@
             </div>
                            
        <div>
-            <input type="image" src="~/images/btns/btn-jogar.png" value="CriarJogo" class="BotaoJogar"></input>
+            <input type="image" src="~/images/btns/btn-jogar.png" value="CriarJogo" class="BotaoJogar"/>
        </div>
        
 
