--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -89,88 +89,84 @@
             </div>
         </div>
         </div>
-        <div class="row">
-            <div class="col-md-2">
-                <div class="areadados">
+    <div class="row">
+        <div class="col-md-2">
+            <div class="areadados">
 
-                    <div>
-                        <img src="~/images/Icons/icon-pocaoVida.png" class="icons" />  @Model.PocoesVida
-                    </div>
-                    <div>
-                        <img src="~/images/Icons/icon-forca.png" class="icons" />  @Model.PontosAtaque
-                    </div>
+                <div>
+                    <img src="~/images/Icons/icon-pocaoVida.png" class="icons" />  @Model.PocoesVida
+                </div>
+                <div>
+                    <img src="~/images/Icons/icon-forca.png" class="icons" />  @Model.PontosAtaque
+                </div>
 
-                    <div>
-                        <img src="~/images/Icons/icon-luck.png" class="icons" />  @Model.PontosSorte
-                    </div>
-                    <div class="iconMoeda">
-                        <img src="~/images/Icons/icon-moeda.png" class="icons" />  @Model.MoedasOuro
-                    </div>
+                <div>
+                    <img src="~/images/Icons/icon-luck.png" class="icons" />  @Model.PontosSorte
+                </div>
+                <div class="iconMoeda">
+                    <img src="~/images/Icons/icon-moeda.png" class="icons" />  @Model.MoedasOuro
                 </div>
             </div>
+        </div>
 
-            <div class="col-md-8">
-                @if (Model.Monstro == true)
-                {
-                    <!--Imagem do Monstro-->
-                    <img src="~/images/Icons/icon-key.png" class="monstro" />
-                }
-            </div>
-            <div class="col-md-2 text-center">
+        <div class="col-md-8">
+            @if (Model.Monstro == true)
+            {
+                <!--Imagem do Monstro-->
+                <img src="~/images/Icons/icon-key.png" class="monstro" />
+            }
+        </div>
+        <div class="col-md-2 text-center">
+            <form action="AccaoJogo" method="post">
                 @if (Model.Monstro == false)
                 {
-                <div class="areabotoes">
-                    <form asp-action="Jogada" asp-controller="Jogo" method="post">
+                    <div class="areabotoes">
                         <div>
-                            <input name="action" value="GoForward" type="hidden"/>
-                            <button type="submit"><img src="~/images/btns/btn-avancar.png" class="BotoesJogo"/></button>
+                            <input name="gameid" value="@Model.GameID" type="hidden" />
+                            <button class="BotoesJogo" type="submit" name="action" value="GoForward" ><img src="~/images/btns/btn-avancar.png" alt="Avançar"></button>
                         </div>
-                    </form>
-                    @if (Model.Sala != 1)
-                    {
+                        @if (Model.Sala != 1)
+                        {
+                            <div>
+                                <input name="gameid" value="@Model.GameID" type="hidden" />
+                                <button class="BotoesJogo" type="submit" name="action" value="GoBack"><img src="~/images/btns/btn-recuar.png" alt="Recuar"></button>
+                            </div>
+                        }
                         <div>
-                            <a asp-action="" role="button"><img src="~/images/btns/btn-recuar.png" class="BotoesJogo" /></a> 
+                            <input name="gameid" value="@Model.GameID" type="hidden" />
+                            <button class="BotoesJogo" type="submit" name="action" value="SearchArea"><img src="~/images/btns/btn-examinar.png" alt="Examinar"></button>
                         </div>
-                    }
-                    <div>
-                        <a asp-action="" role="button"><img src="~/images/btns/btn-examinar.png" class="BotoesJogo" /></a> 
                     </div>
-                    <div>
-                        <a asp-action="" role="button"><img src="~/images/btns/btn-pocao.png" class="BotoesJogo" /></a> 
-                    </div>
-                    <div>
-                        <a asp-action="CriarJogo" role="button"><img src="~/images/btns/btn-recomecar.png" class="BotoesJogo" /></a> 
-                    </div>
-                    <div>
-                        <a asp-action="" role="button"><img src="~/images/btns/btn-desistir.png" class="BotoesJogo" /></a>
-                    </div>
-                    <div>
-                        <a asp-action="JogoMonstro">Página do monstro</a>
-                    </div>
-                </div>
                 }
                 else
                 {
                     <div class="areabotoes">
+
                         <div>
-                            <a asp-action="" role="button"><img src="~/images/btns/btn-atacar.png" class="BotoesJogo" /></a>
+                            <input name="gameid" value="@Model.GameID" type="hidden" />
+                            <button class="BotoesJogo" type="submit" name="action" value="Attack"><img src="~/images/btns/btn-atacar.png" alt="Atacar"></button>
                         </div>
                         <div>
-                            <a asp-action="" role="button"><img src="~/images/btns/btn-fugir.png" class="BotoesJogo" /></a>
-                        </div>
-                        <div>
-                            <a asp-action="" role="button"><img src="~/images/btns/btn-pocao.png" class="BotoesJogo" /></a>
-                        </div>
-                        <div>
-                            <a asp-action="CriarJogo" role="button"><img src="~/images/btns/btn-recomecar.png" class="BotoesJogo" /></a>
-                        </div>
-                        <div>
-                            <a asp-action="" role="button"><img src="~/images/btns/btn-desistir.png" class="BotoesJogo" /></a>
+                            <input name="gameid" value="@Model.GameID" type="hidden" />
+                            <button class="BotoesJogo" type="submit" name="action" value="Flee"><img src="~/images/btns/btn-fugir.png" alt="Fugir"></button>
                         </div>
                     </div>
                 }
-            </div>
-        </div>
-   
+
+                    <div>
+                        <input name="gameid" value="@Model.GameID" type="hidden" />
+                        <button class="BotoesJogo" type="submit" name="action" value="DrinkPotion"><img src="~/images/btns/btn-pocao.png" alt="Beber Poção"></button>
+                    </div>
+                <div>
+                    <a asp-action="CriarJogo" role="button"><img src="~/images/btns/btn-recomecar.png" class="BotoesJogo" /></a>
+                </div>
+                <div>
+                    <input name="gameid" value="@Model.GameID" type="hidden" />
+                     <button class="BotoesJogo" type="submit" name="action" value="Quit" ><img src="~/images/btns/btn-desistir.png" alt="Desistir"></button>
+                </div>
+            </form>
+             </div>
+    </div>
+  
 </body>
 </html>
