--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -89,6 +89,9 @@ body {
     width: 55%;
     height: 55%;
     margin: 5px;
+    background: none;
+    border-color: none;
+    border-style: none;
 }
 .BotoesJogo:hover {
      filter: brightness(1.4);
