--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -109,7 +109,7 @@
                 </div>
             </div>
         </div>
-
+        ttes
         <div class="col-md-8">
             @if (Model.Monstro == true)
             {
