--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -107,6 +107,9 @@
                 <div class="iconMoeda">
                     <img src="~/images/Icons/icon-moeda.png" class="icons" />  @Model.MoedasOuro
                 </div>
+                <div>
+                    <h2>@Model.GameID</h2>
+                </div>
             </div>
         </div>
 
