--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -14,9 +14,8 @@ body {
     font-size: 15px;
     letter-spacing: 1px;
     background-image: url('../images/Layout/Entrance v2.jpg');
-    background-size: 100%;
+    background-size: 100% 100vh;
     background-repeat: no-repeat;
-    background-size: cover;
 }
 
 
